--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 08 22:16:05 SGT 2019
-sdk.dir=C\:\\Users\\kkenb\\AppData\\Local\\Android\\Sdk
+#Wed Nov 27 08:48:09 SGT 2019
+sdk.dir=C\:\\Users\\taruc\\AppData\\Local\\Android\\Sdk
